# deep-thought

./: AUTHORS  CMakeLists.txt  Doxyfile  configure
include/: CompilerMagic.hpp  Constants.hpp
include/libdeepthought/: AIEngine.hpp  AIManager.hpp  AIStatus.hpp  Configuration.hpp  DboObjBase.hpp  DeepThought.hpp  DeepThoughtForward.hpp  Generation.hpp  GenerationPtr.hpp  Genome.hpp  GenomePtr.hpp  Match.hpp  MatchMaker.hpp  MatchPtr.hpp  MatchResult.hpp  NullSolver.hpp  Population.hpp  PopulationPtr.hpp  SolverBase.hpp  Supervisor.hpp  TetrinetServerPool.hpp
include/libtetrinet/: Enum.hpp  Field.hpp  FieldElement.hpp  FieldEvaluator.hpp  FieldTransform.hpp  GameSettings.hpp  Piece.hpp  PieceLocation.hpp  PieceRotation.hpp  PieceShape.hpp  ProtocolVersion.hpp  RotationDirection.hpp  SpecialPiece.hpp  Tetrinet.hpp  TetrinetClient.hpp  TetrinetConnection.hpp  TetrinetForward.hpp  TetrinetMessage.hpp
src/: AIEngine.cpp  AIEngine.h  AIEngine.hpp  AIManager.cpp  AIManager.hpp  AIStatus.hpp  CMakeLists.txt  Constants.hpp  CorpusGenerator.cpp  DeepThought.cpp  Enum.hpp  Field.cpp  Field.hpp  FieldEvaluator.cpp  FieldEvaluator.hpp  FieldTransform.cpp  FieldTransform.hpp  Generation.cpp  Generation.hpp  Genome.cpp  Genome.hpp  MainWindow.cpp  MainWindow.h  MarkovGenerator.cpp  MarkovGenerator.hpp  Match.cpp  Match.hpp  Piece.cpp  Piece.hpp  Population.cpp  Population.hpp  Random.hpp  Supervisor.cpp  Supervisor.hpp  TermInterface.cpp  TermInterface.hpp  TetrinetClient.cpp  TetrinetClient.hpp  TetrinetServerPool.cpp  TetrinetServerPool.hpp  (+2 more)
src/Engine/: Enum.cpp  Enum.hpp  Field.cpp  Field.hpp  FieldTransform.cpp  FieldTransform.hpp  Piece.cpp  Piece.hpp
src/Program/: DeepThought.cpp
src/Test/: CMakeLists.txt  CreatePopulation.cpp  EngineTest.cpp  ServerTest.cpp  SimpleTest.cpp  SpecialTest.cpp
src/client/: CMakeLists.txt  DeepThought.cpp
src/libdeepthought/: AIEngine.cpp  AIManager.cpp  CMakeLists.txt  Generation.cpp  GenerationPtr.cpp  Genome.cpp  GenomePtr.cpp  Match.cpp  MatchPtr.cpp  NullSolver.cpp  Population.cpp  PopulationPtr.cpp  SolverBase.cpp  Supervisor.cpp  TetrinetServerPool.cpp  ub.txt
src/libsimplemarkov/: CMakeLists.txt  MarkovGenerator.cpp
src/libtetrinet/: CMakeLists.txt  Field.cpp  FieldElement.cpp  FieldEvaluator.cpp  FieldTransform.cpp  GameSettings.cpp  Piece.cpp  PieceLocation.cpp  PieceShape.cpp  ProtocolVersion.cpp  SpecialPiece.cpp  SpecialTransform.cpp  TetrinetClient.cpp  TetrinetMessage.cpp
src/misc/: Markov.cpp
src/server/: CMakeLists.txt  PopulationWidget.cpp  PopulationWidget.hpp  Server.cpp  Server.hpp
tools/share/cmake/: FindCurses.cmake
