SET(project_LIBS ${Boost_LIBRARIES} ${LOG4CXX_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${CURSES_LIBRARIES} ${SOCI_LIBRARY} ${SOCI_sqlite3_PLUGIN} ${SQLITE3_LIBRARIES})

ADD_SUBDIRECTORY(libdeepthought)
ADD_SUBDIRECTORY(libsimplemarkov)
ADD_SUBDIRECTORY(libtetrinet)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(Test)
