SET(project_BIN ${PROJECT_NAME})

INCLUDE_DIRECTORIES(${MAINFOLDER}/src)
ADD_EXECUTABLE(${project_BIN} DeepThought.cpp)
TARGET_LINK_LIBRARIES(${project_BIN} tetrinet)
TARGET_LINK_LIBRARIES(${project_BIN} deepthought)
TARGET_LINK_LIBRARIES(${project_BIN} simplemarkov)
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
