FILE(GLOB server_SRCS *.cpp)
SET(server_libs ${Boost_LIBRARIES} ${LOG4CXX_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${SOCI_LIBRARY} ${SOCI_sqlite3_PLUGIN} ${SQLITE3_LIBRARIES} ${Wt_LIBRARIES})
SET(server_BIN server)

INCLUDE_DIRECTORIES(${MAINFOLDER}/src)
ADD_EXECUTABLE(server ${server_SRCS})
TARGET_LINK_LIBRARIES(${server_BIN} tetrinet)
TARGET_LINK_LIBRARIES(${server_BIN} ${server_libs})
SET_TARGET_PROPERTIES(${server_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${server_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${server_BIN} DESTINATION bin)
